<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ausgaben</string>
    <string name="action_settings">Einstellungen</string>
    <string name="button_record_purchase">Einkauf erfassen</string>
    <string name="button_next">Fertig</string>
    <string name="title_activity_enter_name">Einkauf erfassen</string>
    <string name="title_activity_record_purchase">Einkauf erfassen</string>
    <string name="purchase_name">Name</string>
    <string name="purchase_amount">Menge:</string>
    <string name="purchase_price">Preis in €</string>
    <string name="purchase_deleted">Ausgabe gelöscht</string>
    <string name="purchase_created">Ausgabe erfasst</string>
    <string name="purchase_updated">Ausgabe aktualisiert</string>
    <string name="button_scan">Sc</string>
    <string name="action_sync_data">Synchronisieren (Bluetooth)</string>
    <string name="title_activity_activity_sync_data">Synchronisieren (Bluetooth)</string>
    <string name="blu_on">Ein</string>
    <string name="blu_off">Aus</string>
    <string name="blu_list">Liste auf</string>
    <string name="blu_find">Finde</string>
    <string name="blu_not_available">Bluetooth wird vom Gerät nicht unterstützt</string>
    <string name="blu_turned_on">Bluetooth eingeschaltet</string>
    <string name="blu_turned_off">Bluetooth ausgeschaltet</string>
    <string name="blu_already_turned_on">Bluetooth eingeschaltet</string>
    <string name="blu_status_turned_on">Status: eingeschaltet</string>
    <string name="blu_status_turned_off">Status: ausgeschaltet</string>
    <string name="blu_status_not_supported">Status: nicht unterstützt</string>
    <string name="title_activity_activity_pie_chart">ActivityPieChart</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_statistik">Statistik</string>
    <string name="values_not_valid">Bitte alle Felder ausfüllen</string>
    <string name="price_not_valid">Der eingegebene Preis ist nicht gültig</string>
    <string name="title_activity_activity_line_chart">ActivityLineChart</string>
    <string name="paidInCash">Barzahlung</string>
    <string name="barcodeScanned">Barcode hinterlegt</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="question_cancel">Bist Du sicher?</string>
    <string name="title_activity_activity_share_data">ActivityShareData</string>
    <string name="title_activity_activity_bluetooth_devices">ActivityBluetoothDevices</string>
    <string name="menuConnect">Verbinden</string>
    <string name="menuDiscoverable">Sichtar</string>
    <string name="titleActivityShareData">Ausgaben Synchronisieren</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="none_paired">Keine gekoppelten Geräte</string>
    <string name="scanning">Suchen...</string>
    <string name="select_device">Gerät Auswählen</string>
    <string name="none_found">Keine Gefunden</string>
    <string name="send">Senden</string>
    <string name="not_connected">Nicht Verbunden</string>
    <string name="title_connected_to">Verbunden</string>
    <string name="title_connecting">Verbindungsaufbau</string>
    <string name="title_not_connected">Nicht Verbunden</string>
    <string name="bt_not_enabled_leaving">Bluetooth nicht verfügbar</string>
    <string name="button_scan_for_devices">Nach Geräten Suchen</string>
    <string name="title_activity_activity_shopping">ActivityShopping</string>
    <string name="bFinalizeShopping">Einkauf abschließen</string>
    <string name="bAddShoppingItem">Produkt hinzufügen</string>
    <string name="button_record_shopping_short">Sh</string>
    <string name="tvDate">Datum:</string>
    <string name="bIncrease">+</string>
    <string name="bDecrease">-</string>
    <string name="title_activity_activity_shopping_record_purchase">ActivityShoppingRecordPurchase</string>
    <string name="wrong_owner">Du hast diese Ausgabe nicht getätigt und kannst sie nicht editieren.</string>

</resources>
