<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".MainActivity" >

  <TextView
       android:id="@+id/bluetooth_status_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textAppearance="?android:attr/textAppearanceLarge"
       android:text="@string/title_activity_activity_sync_data" />
     
   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
style="?android:attr/buttonBarStyle"
      android:layout_marginTop="30dp" >

   <Button
      android:id="@+id/turnOn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
       style="?android:attr/buttonBarButtonStyle"
      android:text="@string/blu_on" />

   <Button
      android:id="@+id/turnOff"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
       style="?android:attr/buttonBarButtonStyle"
      android:text="@string/blu_off" />

   </LinearLayout>
   
   
   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginTop="80dp" >
   
	   <Button
	      android:id="@+id/paired"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/blu_list" />
	     
	   <Button
	      android:id="@+id/search"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/blu_find" />

	   <ListView
	       android:id="@+id/listView1"
	       android:layout_width="fill_parent"
	       android:layout_height="200dp" >
	
	   </ListView>

   </LinearLayout>

</RelativeLayout>
