<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pfeiffer.expenses.activity.ActivityShopping">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customborder"
        android:orientation="vertical">

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/tvDate"/>-->

        <EditText
            android:id="@+id/etShoppingDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sShoppingCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/sShoppingLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cbShoppingCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paidInCash" />

        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/bAddItem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bAddShoppingItem" />

    <Button
        android:id="@+id/bFinalize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bFinalizeShopping" />
</LinearLayout>
